<resources>
    <string name="app_name">EPA!</string>
    <string name="text_DigitePalavra">Digite uma palavra no formato: sílaba/sílaba/sílaba</string>
    <string name="hint_Tartaruga">tar/ta/ru/ga</string>
    <string name="text_DigitePalavraVideo">Digite uma palavra</string>
    <string name="hint_TartarugaVideo">tartaruga</string>
    <string name="iniciar">Iniciar</string>
    <string name="deletar">DELETAR</string>
    <string name="Ajuda1">\t EPA! é um app de auxílio ao processo de ensino de forma diferente e divertida.</string>
    <string name="Ajuda2">\t Antes de mais nada, cadastre uma senha clicando no cadeado da tela de início. Ela será necessária para acessar as opções de gerenciamento do app e visualizar os resultados das atividades. </string>
    <string name="Ajuda3">\t CRIANDO NOVAS ATIVIDADES: </string>
    <string name="Ajuda4">\t Para criar novas atividades, clique em gerenciar na tela de início e depois criar. </string>
    <string name="Ajuda5">\t Para criar uma atividade de imagem, escolha uma imagem ou tire uma foto e digite uma palavra que se relacione tendo as sílabas separadas por barra(/). </string>
    <string name="Ajuda6">\t Para criar uma atividade de vídeo, escolha ou grave um vídeo e digite uma palavra que se relacione com o vídeo. </string>
    <string name="Ajuda7">\t EXCLUINDO ATIVIDADES: </string>
    <string name="Ajuda8">\t As palavras podem pertencer a três tipos distintos conforme indicados pelas colunas:  </string>
    <string name="Ajuda9">\t Banco de Dados: Excluir uma palavra do Banco de Dados fará com que nem ela nem suas sílabas possam mais ser opções em atividades </string>
    <string name="Ajuda10">\t Imagem ou Vídeo: Excluir uma atividade tipo Imagem ou Vídeo relacionada a uma palavra fará com que a atividade não possa mais ser executada, porém a palavra e suas sílabas ainda estarão no Banco de Dados e poderão ser opções em outras atividades </string>
    <string name="Autores">CRIADO E DESENVOLVIDO POR:</string>
    <string name="Cesar">Cesar Abreu</string>
    <string name="Gustavo">Gustavo Nakagawa</string>
    <string name="Renata">Renata Sarmet</string>
    <string name="Yuri">Yuri Lovaho</string>
    <string name="enter_new_password">Digite a nova senha.</string>
    <string name="enter_your_password">Digite a sua senha</string>
    <string name="confirm_password">Confirme a nova senha.</string>
    <string name="sucess_change_password">Senha alterada com sucesso!</string>
    <string name="password_confirmation_failed">Senhas não conferem, tente novamente.</string>
    <string name="incorrect_password">Senha incorreta.</string>
    <string name="blocked_function">Essa função está bloqueada.</string>
</resources>
